# Fine_Tune_Phi2_with_Amazon_description_data

./: main.py  ph2_CustomData.ipynb  pyproject.toml
